# cognitive-comp

./: .gitignore  README.md
atividades/: pyproject.toml
atividades/NLP/Aula_1/: code1.py  code2.py  code3.py  code4.py  code5.py
dsm/: README.md  pyproject.toml  tasks.py
dsm/data/processed/: std_socialmedia_relevant_cols.csv
dsm/dsm/: preprocess.py
dsm/notebooks/: lematization.ipynb  notebook1.ipynb  notebook2.ipynb  preprocessing3.ipynb  sentiment_analysis.ipynb  tokenization1.ipynb  tokenization2.ipynb  tokenization3.ipynb
dsm/tests/: test_dsm.py
notebooks/: notebook1.ipynb
trailhead/: README.md  pyproject.toml  tasks.py
trailhead/notebooks/: lematization.ipynb  preprocessing1.ipynb  preprocessing2.ipynb  sentiment_analysis.ipynb  tokenization1.ipynb  tokenization2.ipynb  tokenization3.ipynb  tokenization_segmentation.ipynb
trailhead/tests/: test_trailhead.py
trailhead/trailhead/: nlp.py
